<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8391DA"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/elf_cam"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="256dp"
        android:layout_height="256dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.381"
        tools:srcCompat="@drawable/camera" />

    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="234dp"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.945">

        <Button
            android:id="@+id/photoButton"
            android:layout_width="305dp"
            android:layout_height="61dp"
            android:text="@string/click_a_photo" />

        <Button
            android:id="@+id/videoButton"
            android:layout_width="301dp"
            android:layout_height="66dp"
            android:text="@string/record_a_video" />

        <Button
            android:id="@+id/back2"
            android:layout_width="299dp"
            android:layout_height="60dp"
            android:text="@string/back" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>