<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#94A1EC"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="402dp"
        android:layout_height="627dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="16dp">

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:fontFamily="monospace"
            android:text="@string/baldurs_gate_cam"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="#000000" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="312dp"
            tools:srcCompat="@drawable/as" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="391dp"
            android:layout_height="90dp"
            android:layout_marginEnd="64dp"
            android:text="@string/text1"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#120F0F"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="135dp"
        android:layout_height="58dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />

</androidx.constraintlayout.widget.ConstraintLayout>